--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -348,15 +348,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Product description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="shd-AM-Cua">
-                                <rect key="frame" x="16" y="80" width="303" height="63"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
-                                <connections>
-                                    <outlet property="delegate" destination="hN5-yd-lV3" id="v9m-ZW-zhm"/>
-                                </connections>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CZz-Sw-Fmc">
                                 <rect key="frame" x="329" y="80" width="30" height="30"/>
                                 <constraints>
@@ -383,21 +374,50 @@
                                     <outletCollection property="gestureRecognizers" destination="oRe-oJ-znS" appends="YES" id="LCA-Wq-Ncj"/>
                                 </connections>
                             </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="SXv-sA-g9V">
+                                <rect key="frame" x="16" y="80" width="303" height="63"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" red="0.59082231659999995" green="0.59082231659999995" blue="0.59082231659999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="delegate" destination="hN5-yd-lV3" id="atg-Fh-KF9"/>
+                                </connections>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="S0k-gC-Knm" firstAttribute="trailing" secondItem="YbP-zU-mCh" secondAttribute="trailing" constant="16" id="0Fc-mY-OtA"/>
+                            <constraint firstItem="SXv-sA-g9V" firstAttribute="leading" secondItem="S0k-gC-Knm" secondAttribute="leading" constant="16" id="0sr-HF-xXO"/>
                             <constraint firstItem="S0k-gC-Knm" firstAttribute="bottom" secondItem="KIP-yL-mNj" secondAttribute="bottom" constant="16" id="14p-zr-ax8"/>
                             <constraint firstItem="KIP-yL-mNj" firstAttribute="leading" secondItem="S0k-gC-Knm" secondAttribute="leading" constant="16" id="2Iq-Ez-dNc"/>
                             <constraint firstItem="S0k-gC-Knm" firstAttribute="trailing" secondItem="KIP-yL-mNj" secondAttribute="trailing" constant="16" id="TZK-zk-f3z"/>
-                            <constraint firstItem="KIP-yL-mNj" firstAttribute="top" secondItem="shd-AM-Cua" secondAttribute="bottom" constant="8" id="TgP-lL-otP"/>
                             <constraint firstItem="CZz-Sw-Fmc" firstAttribute="top" secondItem="S0k-gC-Knm" secondAttribute="top" constant="16" id="Uo5-54-UFw"/>
-                            <constraint firstItem="shd-AM-Cua" firstAttribute="leading" secondItem="S0k-gC-Knm" secondAttribute="leading" constant="16" id="YWZ-ip-eMi"/>
                             <constraint firstItem="YbP-zU-mCh" firstAttribute="top" secondItem="CZz-Sw-Fmc" secondAttribute="bottom" constant="3" id="Yie-08-jLJ"/>
                             <constraint firstItem="S0k-gC-Knm" firstAttribute="trailing" secondItem="CZz-Sw-Fmc" secondAttribute="trailing" constant="16" id="bvY-SP-lKc"/>
-                            <constraint firstItem="shd-AM-Cua" firstAttribute="top" secondItem="S0k-gC-Knm" secondAttribute="top" constant="16" id="c4i-yJ-4or"/>
-                            <constraint firstItem="YbP-zU-mCh" firstAttribute="leading" secondItem="shd-AM-Cua" secondAttribute="trailing" constant="8" id="q8v-Ve-ttB"/>
-                            <constraint firstItem="shd-AM-Cua" firstAttribute="bottom" secondItem="YbP-zU-mCh" secondAttribute="bottom" id="sIb-8P-Kph"/>
+                            <constraint firstItem="YbP-zU-mCh" firstAttribute="leading" secondItem="SXv-sA-g9V" secondAttribute="trailing" constant="8" id="fHc-Kn-VE5"/>
+                            <constraint firstItem="KIP-yL-mNj" firstAttribute="top" secondItem="YbP-zU-mCh" secondAttribute="bottom" constant="8" id="jZT-D4-E9a"/>
+                            <constraint firstItem="SXv-sA-g9V" firstAttribute="bottom" secondItem="YbP-zU-mCh" secondAttribute="bottom" id="lS8-RW-aL8"/>
+                            <constraint firstItem="SXv-sA-g9V" firstAttribute="top" secondItem="S0k-gC-Knm" secondAttribute="top" constant="16" id="tSI-Xn-q7X"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="S0k-gC-Knm"/>
                     </view>
@@ -410,7 +430,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="mImage" destination="KIP-yL-mNj" id="GpV-rK-QmH"/>
-                        <outlet property="mTxtDesc" destination="shd-AM-Cua" id="v1K-lm-MUl"/>
+                        <outlet property="mTxtDesc" destination="SXv-sA-g9V" id="999-UG-wyu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BxL-9a-chx" userLabel="First Responder" sceneMemberID="firstResponder"/>
