--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -383,7 +383,7 @@
                                 <rect key="frame" x="16" y="80" width="293" height="83"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="next"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
                                         <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -408,6 +408,12 @@
                                     <outlet property="delegate" destination="hN5-yd-lV3" id="atg-Fh-KF9"/>
                                 </connections>
                             </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V0v-Hq-w3E">
+                                <rect key="frame" x="21" y="85" width="293" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -415,12 +421,15 @@
                             <constraint firstItem="SXv-sA-g9V" firstAttribute="leading" secondItem="S0k-gC-Knm" secondAttribute="leading" constant="16" id="0sr-HF-xXO"/>
                             <constraint firstItem="S0k-gC-Knm" firstAttribute="bottom" secondItem="KIP-yL-mNj" secondAttribute="bottom" constant="16" id="14p-zr-ax8"/>
                             <constraint firstItem="KIP-yL-mNj" firstAttribute="leading" secondItem="S0k-gC-Knm" secondAttribute="leading" constant="16" id="2Iq-Ez-dNc"/>
+                            <constraint firstItem="V0v-Hq-w3E" firstAttribute="width" secondItem="SXv-sA-g9V" secondAttribute="width" id="5gH-a6-TfV"/>
                             <constraint firstItem="S0k-gC-Knm" firstAttribute="trailing" secondItem="KIP-yL-mNj" secondAttribute="trailing" constant="16" id="TZK-zk-f3z"/>
                             <constraint firstItem="CZz-Sw-Fmc" firstAttribute="top" secondItem="S0k-gC-Knm" secondAttribute="top" constant="16" id="Uo5-54-UFw"/>
                             <constraint firstItem="YbP-zU-mCh" firstAttribute="top" secondItem="CZz-Sw-Fmc" secondAttribute="bottom" constant="3" id="Yie-08-jLJ"/>
                             <constraint firstItem="S0k-gC-Knm" firstAttribute="trailing" secondItem="CZz-Sw-Fmc" secondAttribute="trailing" constant="8" id="bvY-SP-lKc"/>
                             <constraint firstItem="YbP-zU-mCh" firstAttribute="leading" secondItem="SXv-sA-g9V" secondAttribute="trailing" constant="8" id="fHc-Kn-VE5"/>
+                            <constraint firstItem="V0v-Hq-w3E" firstAttribute="leading" secondItem="SXv-sA-g9V" secondAttribute="leading" constant="5" id="gus-xF-DR4"/>
                             <constraint firstItem="KIP-yL-mNj" firstAttribute="top" secondItem="YbP-zU-mCh" secondAttribute="bottom" constant="8" id="jZT-D4-E9a"/>
+                            <constraint firstItem="V0v-Hq-w3E" firstAttribute="top" secondItem="SXv-sA-g9V" secondAttribute="top" constant="5" id="l3R-Ih-0FL"/>
                             <constraint firstItem="SXv-sA-g9V" firstAttribute="bottom" secondItem="YbP-zU-mCh" secondAttribute="bottom" id="lS8-RW-aL8"/>
                             <constraint firstItem="SXv-sA-g9V" firstAttribute="top" secondItem="S0k-gC-Knm" secondAttribute="top" constant="16" id="tSI-Xn-q7X"/>
                         </constraints>
@@ -436,6 +445,7 @@
                     <connections>
                         <outlet property="mBtnQRCode" destination="CZz-Sw-Fmc" id="sUl-cr-SJt"/>
                         <outlet property="mImage" destination="KIP-yL-mNj" id="GpV-rK-QmH"/>
+                        <outlet property="mLabelPlaceHold" destination="V0v-Hq-w3E" id="jls-Hb-5d6"/>
                         <outlet property="mTxtDesc" destination="SXv-sA-g9V" id="999-UG-wyu"/>
                     </connections>
                 </viewController>
