--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -509,6 +509,7 @@
                         <segue destination="36q-eX-WSN" kind="relationship" relationship="viewControllers" id="X5B-nM-VJM"/>
                         <segue destination="PRA-hX-b79" kind="relationship" relationship="viewControllers" id="lrZ-vo-sY0"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="g6v-Vh-Ozx"/>
+                        <segue destination="riG-Id-5RL" kind="relationship" relationship="viewControllers" id="Llh-26-Yya"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -564,6 +565,108 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GYz-Zi-7Ox" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="532" y="-998"/>
+        </scene>
+        <!--Sales Leads-->
+        <scene sceneID="9sV-Av-9h6">
+            <objects>
+                <navigationController id="riG-Id-5RL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Sales Leads" image="business" id="Hwa-Mu-Rzs"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eYu-zY-2da">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Vri-N7-28E" kind="relationship" relationship="rootViewController" id="VaZ-Kc-etc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8vK-7f-F7s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="542" y="-1813"/>
+        </scene>
+        <!--Received Product View Controller-->
+        <scene sceneID="kbD-p3-SR7">
+            <objects>
+                <viewController storyboardIdentifier="ReceivedProductViewController" id="Ybg-5w-xf7" customClass="ReceivedProductViewController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="A3A-XJ-oKv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Yrx-ZL-DdD">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" rowHeight="76" id="7io-f8-Ca1" customClass="CustomTableCellView" customModule="SalesEdge" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="76"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7io-f8-Ca1" id="prn-f4-mcf">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="75.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="img" translatesAutoresizingMaskIntoConstraints="NO" id="FnT-J7-BMq">
+                                                    <rect key="frame" x="16" y="8" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="Plb-DH-vBC"/>
+                                                        <constraint firstAttribute="width" constant="60" id="o4K-8z-1mz"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="timestamp" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xHi-ZO-Ue5">
+                                                    <rect key="frame" x="321" y="8" width="21" height="12"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" restorationIdentifier="title" text="prod" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="53I-T2-KsT">
+                                                    <rect key="frame" x="84" y="20" width="228.5" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" restorationIdentifier="subtitle" text="spec" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZm-Pi-54B">
+                                                    <rect key="frame" x="84" y="44" width="258" height="29"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="dZm-Pi-54B" firstAttribute="bottom" secondItem="prn-f4-mcf" secondAttribute="bottomMargin" constant="8" id="8bP-0p-9OB"/>
+                                                <constraint firstItem="xHi-ZO-Ue5" firstAttribute="leading" secondItem="53I-T2-KsT" secondAttribute="trailing" constant="8.5" id="APk-ef-09R"/>
+                                                <constraint firstItem="53I-T2-KsT" firstAttribute="leading" secondItem="FnT-J7-BMq" secondAttribute="trailing" constant="8" id="BpE-H2-MhL"/>
+                                                <constraint firstItem="dZm-Pi-54B" firstAttribute="trailing" secondItem="prn-f4-mcf" secondAttribute="trailingMargin" constant="8" id="C8d-yR-Q5O"/>
+                                                <constraint firstItem="53I-T2-KsT" firstAttribute="top" secondItem="xHi-ZO-Ue5" secondAttribute="bottom" id="CIc-0s-Zyi"/>
+                                                <constraint firstItem="FnT-J7-BMq" firstAttribute="top" secondItem="prn-f4-mcf" secondAttribute="top" constant="8" id="KI3-D6-HAd"/>
+                                                <constraint firstItem="FnT-J7-BMq" firstAttribute="leading" secondItem="prn-f4-mcf" secondAttribute="leading" constant="16" id="RmX-1t-gSo"/>
+                                                <constraint firstItem="xHi-ZO-Ue5" firstAttribute="top" secondItem="prn-f4-mcf" secondAttribute="top" constant="8" id="fDJ-uM-q8w"/>
+                                                <constraint firstAttribute="bottom" secondItem="FnT-J7-BMq" secondAttribute="bottom" constant="8" id="ie0-J1-RO9"/>
+                                                <constraint firstItem="dZm-Pi-54B" firstAttribute="top" secondItem="53I-T2-KsT" secondAttribute="bottom" constant="8" id="jqT-8F-fBR"/>
+                                                <constraint firstItem="dZm-Pi-54B" firstAttribute="leading" secondItem="FnT-J7-BMq" secondAttribute="trailing" constant="8" id="tRx-Tj-ImM"/>
+                                                <constraint firstAttribute="trailing" secondItem="xHi-ZO-Ue5" secondAttribute="trailing" id="x8O-qk-AQW"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="mImage" destination="FnT-J7-BMq" id="Cg9-ou-0B0"/>
+                                            <outlet property="mTxtLabel" destination="53I-T2-KsT" id="EIo-wh-ENu"/>
+                                            <outlet property="mTxtSubTitle" destination="dZm-Pi-54B" id="8qv-dX-LOA"/>
+                                            <outlet property="mTxtTimestamp" destination="xHi-ZO-Ue5" id="GKd-ky-4hn"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Yrx-ZL-DdD" firstAttribute="top" secondItem="UlN-W5-B7W" secondAttribute="top" id="05N-g1-2Q6"/>
+                            <constraint firstItem="Yrx-ZL-DdD" firstAttribute="leading" secondItem="UlN-W5-B7W" secondAttribute="leading" id="3Rm-e8-rka"/>
+                            <constraint firstItem="UlN-W5-B7W" firstAttribute="bottom" secondItem="Yrx-ZL-DdD" secondAttribute="bottom" id="fUO-Yh-eLK"/>
+                            <constraint firstItem="UlN-W5-B7W" firstAttribute="trailing" secondItem="Yrx-ZL-DdD" secondAttribute="trailing" id="rh4-36-1kG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UlN-W5-B7W"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ool-tG-TcU"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v7c-7K-UJc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2660" y="-1833"/>
         </scene>
         <!--MyID View Controller-->
         <scene sceneID="MIg-vc-L5u">
@@ -659,9 +762,59 @@
             </objects>
             <point key="canvasLocation" x="4593.5" y="-1088.5"/>
         </scene>
+        <!--Sales Leads-->
+        <scene sceneID="vI3-X3-ViZ">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="Vri-N7-28E" customClass="SalesLeadsViewController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="csv-jo-2n8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yoL-0X-5jw">
+                                <rect key="frame" x="0.0" y="107" width="375" height="510"/>
+                            </scrollView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mG6-y1-a3a" customClass="ButtonBarView" customModule="XLPagerTabStrip">
+                                <rect key="frame" x="0.0" y="64" width="375" height="43"/>
+                                <color key="backgroundColor" red="0.027450980390000001" green="0.72549019609999998" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="2Sy-57-fqw"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qKy-dM-x10">
+                                    <size key="itemSize" width="79" height="42"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="35" minY="0.0" maxX="35" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="nR1-PW-Ha9" firstAttribute="trailing" secondItem="yoL-0X-5jw" secondAttribute="trailing" id="9mx-BV-GDu"/>
+                            <constraint firstItem="yoL-0X-5jw" firstAttribute="leading" secondItem="nR1-PW-Ha9" secondAttribute="leading" id="HZY-kG-8UG"/>
+                            <constraint firstItem="mG6-y1-a3a" firstAttribute="top" secondItem="nR1-PW-Ha9" secondAttribute="top" id="KXt-z0-WK4"/>
+                            <constraint firstItem="nR1-PW-Ha9" firstAttribute="trailing" secondItem="mG6-y1-a3a" secondAttribute="trailing" id="LLs-Qw-KBC"/>
+                            <constraint firstItem="nR1-PW-Ha9" firstAttribute="bottom" secondItem="yoL-0X-5jw" secondAttribute="bottom" constant="1" id="lOl-UB-DHz"/>
+                            <constraint firstItem="mG6-y1-a3a" firstAttribute="leading" secondItem="nR1-PW-Ha9" secondAttribute="leading" id="la3-ox-zsJ"/>
+                            <constraint firstItem="yoL-0X-5jw" firstAttribute="top" secondItem="nR1-PW-Ha9" secondAttribute="top" constant="43" id="lr3-Rg-Qhu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nR1-PW-Ha9"/>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Sales Leads" id="LuM-bH-ga6"/>
+                    <connections>
+                        <outlet property="buttonBarView" destination="mG6-y1-a3a" id="y9q-3v-wma"/>
+                        <outlet property="containerView" destination="yoL-0X-5jw" id="Aci-wd-KNF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gpb-Gr-ZlT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1476" y="-1813"/>
+        </scene>
     </scenes>
     <resources>
         <image name="app_share_qrcode" width="400" height="400"/>
+        <image name="business" width="24" height="24"/>
         <image name="ic_account_box" width="24" height="24"/>
         <image name="ic_border_all" width="24" height="24"/>
         <image name="ic_cloud_upload" width="24" height="24"/>
